--- a/1_HTML_Tags_and_attributes/task_1.html
+++ b/1_HTML_Tags_and_attributes/task_1.html
@@ -1,27 +1,34 @@
-<!DOCTYPE html> 
-<HTML> 
-        <HEAD> 
-            <META charset="utf-8"> 
-            <TITLE>HOW-TO: Программа на Python&mdash;Часть 1</TITLE> 
-        </HEAD> 
-        <BODY> 
-            <H1 allign="center"><strong>HOW-TO: Программа на Python, Часть 1</strong></H1> 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>HOW-TO: Программа на Python&mdash;Часть 1</title>
+</head>
+<body>
+    <H1 allign="center"><strong>HOW-TO: Программа на Python, Часть 1</strong></H1> 
             <ul><i>
                 <li>Программа на Python — часть 1</li>
                 <li>Программа на Python — часть 2</li>
                 <li>Программа на Python — часть 3</li>   
             </i></ul>
             <h1>Содержание</h1>
-            <h2 style="font-weight:bold">HOW-TO: Программа на Python, Часть 1</h2>
+            <h3 style="font-weight:bold">HOW-TO: Программа на Python, Часть 1</h3>
             <ul><i><u>
                 <li>Наша первая программа</li>
                 <li>Пример цикла For</li>     
             </u></i></ul>
-            
-
-
-
-
-
-        </BODY> 
-</HTML> 
+        <span>Из множества существующих языков программирования Python — один из самых лёгких 
+            в изучении. Он создан в конце 80-х годов XX века, но с тех пор он сильно изменился. 
+            Хотя Python входит в состав большинства дистрибутивов Linux, на него часто не 
+            обращают внимания при выборе языка для изучения. В этой статье мы рассмотрим 
+            создание консольных приложений, а в следующей — программирование графических 
+            интерфейсов <u>(GUI)</u>. Давайте создадим простую программу прямо сейчас.
+            </span>
+    <h1><b>Наша первая программа</b></h1>
+    <span>Наберём код в текстовом редакторе (например, в <b>gedit</b>). Потом мы разберёмся, что делает 
+        каждая строка и пойдём дальше.</span>
+    
+</body>
+</html>
