--- a/1_HTML_Tags_and_attributes/task_1.html
+++ b/1_HTML_Tags_and_attributes/task_1.html
@@ -13,12 +13,12 @@
                 <li>Программа на Python — часть 2</li>
                 <li>Программа на Python — часть 3</li>   
             </i></ul>
-            <h1>Содержание</h1>
+            <h2>Содержание</h2>
             <h3 style="font-weight:bold">HOW-TO: Программа на Python, Часть 1</h3>
-            <ul><i><u>
+            <ul><u>
                 <li>Наша первая программа</li>
                 <li>Пример цикла For</li>     
-            </u></i></ul>
+            </u></ul>
         <span>Из множества существующих языков программирования Python — один из самых лёгких 
             в изучении. Он создан в конце 80-х годов XX века, но с тех пор он сильно изменился. 
             Хотя Python входит в состав большинства дистрибутивов Linux, на него часто не 
@@ -29,6 +29,17 @@
     <h1><b>Наша первая программа</b></h1>
     <span>Наберём код в текстовом редакторе (например, в <b>gedit</b>). Потом мы разберёмся, что делает 
         каждая строка и пойдём дальше.</span>
+    <p>Введите эти 4 строки:</p>
+    <br\>
+    <code font-type="Arial">#!/usr/bin/env python
+        print 'Hello. I am a python program.'
+        name = raw_input("What is your name?")
+        print "Hello there, " + name + "!"</code>
+    <span>Это всё. Сохраните файл как <b>hello.py</b> в любом месте. Я предлагаю сохранить его в папке 
+        <b>python_examples</b> в домашнем каталоге. Этот пример показывает, как просто написать 
+        программу на Python. Для запуска программы нужно сделать её файл исполняемым. Для 
+        этого введите в терминале</span>
+    <p>Вот и всё.</p>
     
 </body>
 </html>
