--- a/1_HTML_Tags_and_attributes/task_1.html
+++ b/1_HTML_Tags_and_attributes/task_1.html
@@ -7,19 +7,19 @@
     <title>HOW-TO: Программа на Python&mdash;Часть 1</title>
 </head>
 <body>
-    <H1 allign="center"><strong>HOW-TO: Программа на Python, Часть 1</strong></H1> 
-            <ul><i>
-                <li>Программа на Python — часть 1</li>
-                <li>Программа на Python — часть 2</li>
-                <li>Программа на Python — часть 3</li>   
-            </i></ul>
+    <H1 align="center"><strong>HOW-TO: Программа на Python, Часть 1</strong></H1> 
+            <ul>
+                <li><i>Программа на Python — часть 1</i></li>
+                <li><i>Программа на Python — часть 2</i></li>
+                <li><i>Программа на Python — часть 3</i></li>   
+            </ul>
             <h2>Содержание</h2>
             <h3 style="font-weight:bold">HOW-TO: Программа на Python, Часть 1</h3>
-            <ul><u>
-                <li>Наша первая программа</li>
-                <li>Пример цикла For</li>     
-            </u></ul>
-        <span>Из множества существующих языков программирования Python — один из самых лёгких 
+            <ul>
+                <li><u>Наша первая программа</u></li>
+                <li><u>Пример цикла For</u></li>     
+            </ul>
+        <span align="justify">Из множества существующих языков программирования Python — один из самых лёгких 
             в изучении. Он создан в конце 80-х годов XX века, но с тех пор он сильно изменился. 
             Хотя Python входит в состав большинства дистрибутивов Linux, на него часто не 
             обращают внимания при выборе языка для изучения. В этой статье мы рассмотрим 
@@ -31,15 +31,33 @@
         каждая строка и пойдём дальше.</span>
     <p>Введите эти 4 строки:</p>
     <br\>
-    <code font-type="Arial">#!/usr/bin/env python
+    <pre><code font-type="Arial">
+        #!/usr/bin/env python
         print 'Hello. I am a python program.'
         name = raw_input("What is your name?")
-        print "Hello there, " + name + "!"</code>
-    <span>Это всё. Сохраните файл как <b>hello.py</b> в любом месте. Я предлагаю сохранить его в папке 
+        print "Hello there, " + name + "!"</code></pre>
+    <span align="justify">Это всё. Сохраните файл как <b>hello.py</b> в любом месте. Я предлагаю сохранить его в папке 
         <b>python_examples</b> в домашнем каталоге. Этот пример показывает, как просто написать 
         программу на Python. Для запуска программы нужно сделать её файл исполняемым. Для 
         этого введите в терминале</span>
+    <p font-type="Arial" font-style="italic">chmod +x hello.py</p>
+    <p>в папке, в которой вы сохранили программу. Теперь запустите её.</p>
+    <br\>
+    <pre font-type="Arial">greg@earth:~/python_examples$ ./hello.py
+        Hello. I am a python program.
+        What is your name? Ferd Burphel
+        Hello there, Ferd Burphel!
+        greg@earth:~/python_examples$</pre>
     <p>Вот и всё.</p>
-    
+    <h3>Пример цикла For</h3>
+<p>Теперь давайте рассмотрим пример программирования цикла. Запустите текстовый 
+редактор и наберите следующую программу:</p>
+<br\>
+<pre>#!/usr/bin/env python
+for cntr in range(0,10):
+    print cntr</pre>
+<span align="justify"><em>Не забудьте поставить символ табуляции перед строкой «print cntr».</em> Это важно. В 
+Python для указания на блоки кода используются не круглые «(» и фигурные «{» скобки 
+как в других языках программирования, а отступы</span>
 </body>
 </html>
