--- a/1_HTML_Tags_and_attributes/task_2.html
+++ b/1_HTML_Tags_and_attributes/task_2.html
@@ -33,7 +33,7 @@
         другом коробок с одинаковыми вещами. Например, в одной коробке лежат вилки, в 
         другой — ножи, в третьей — ложки. Посмотрим на простой список— список месяцев. Мы 
         запрограммируем его так:</span>
-     <pre><code font-type="Arial">
+     <pre align="left"><code font-type="Arial">
         months = 
         ['Jan','Feb','Mar','Apr','May','Jun','Jul','Aug','Sep','Oct','Nov','Dec']</code></pre>
      <span>Чтобы создать список, мы заключили все значения в квадратные скобки ( '[' и ']' ). Мы 
