--- a/1_HTML_Tags_and_attributes/task_1.html
+++ b/1_HTML_Tags_and_attributes/task_1.html
@@ -43,7 +43,7 @@
     <p font-type="Arial" font-style="italic">chmod +x hello.py</p>
     <p>в папке, в которой вы сохранили программу. Теперь запустите её.</p>
     <br\>
-    <pre font-type="Arial">greg@earth:~/python_examples$ ./hello.py
+    <pre font-type="Arial">greg@earth:~/python_examples$ ./hello.py"
         Hello. I am a python program.
         What is your name? Ferd Burphel
         Hello there, Ferd Burphel!
