--- a/1_HTML_Tags_and_attributes/add.html
+++ b/1_HTML_Tags_and_attributes/add.html
@@ -21,8 +21,54 @@
     <hr>
     <h3>Семантические и функциональные строчные теги</h3>
     <p>Пожелания автора:</p>
-    <p><s font:color="red">Данный текст убрать из монографии</s>и заменить его на <u font:color="blue">вновь помещённый текст</u>.</p>
-    
-    
+    <p><s><font color="red">Данный текст убрать из монографии </font></s>и заменить его на <u><font color="blue">вновь помещённый текст</font></u>.</p>
+    <hr>
+    <h3>Работа со строчными и блоковыми цитатами</h3>
+    <p>Цитата короткая:</p>
+    <q><i>И всё­таки она вертится!</i></q>
+    <p>Цитата занимающая несколько предложений:</p>
+    <blockquote>О сколько нам открытий чудных</p>
+        <p>Готовят просвещенья дух</p>
+        <p>И опыт, сын ошибок трудных,</p>
+        <p>И гений, парадоксов друг,</p>
+        <p>И случай, бог изобретатель...</p></blockquote>
+    <hr>
+    <h3>Семантические и функциональные строчные теги</h3>
+    <span><strong>Тэг &lt;STRONG&gt; делает данный фрагмент текста более важным.</strong> <em>Тэг &lt;em&gt; менее важным.</em>
+        В то время как теги &lt;b&gt; и &lt;i&gt; делают текст просто <b>полужирным</b> и <i>курсивом</i> соответственно.</span>
+    <hr>
+    <h3>Теги форматирования машинного языка</h3>
+    <p>При выполнении программного кода на языке PERL</p>
+    <code>
+        #!/usr/local/bin/perl<br>
+        print "Content‐type: text/html\n\n";<br>
+        print "&lt;H1&gt;Hello World&lt;/H1&gt;\n";</code>
+    <p>Программа выведет:</p>
+    <code>Hello, World!</code>
+    <p>Однако в браузере у нас будет отображаться результат выполнения этой программы:</p>
+    <h1>Hello, World!</h1>
+    <hr>
+    <h3>Комментарии и литералы(мнемоники) в HTML</h3>
+    <pre>
+    &lt;!‐‐ это комментарий ‐‐&gt;
+            &lt;!‐‐ и это также комментарий,
+            занимающий более одной строки ‐‐&gt;    
+    </pre>
+    <hr>
+    <h3>Теги над­ и подстрочных символов</h3>
+    <h5 align="center">Магазин работает:</h5>
+    <br\>
+    <p align="center">c 08<sup><u>30</u></sup> до 18<sup><u>30</u></sup></p>
+    <p align="center">обед с 13<sup><u>00</u></sup>до 14<sup><u>00</u></sup></p>
+    <p align="center">выходной: <u>суббота</u>,<u>воскресенье</u></p>
+    <hr>
+    <h3>Вот такой текст</h3>
+    <p>нужна подсказка,я не знаю как сделать этот пункт</p>
+    <hr>
+    <h3>Акроним и курсив</h3>
+    <p>ТФ: Y(<b>x</b>)=e<sup><i>-iπx</i></sup>­+log<sub><i>x</i></sub>4</p>
+    <hr>
+    <h3>Тег small внтури абзаца</h3>
+    <p align="right"><small>Создано при помощи блокнота &copy;</small></p>
 </body>
 </html>
