--- a/2_HTML_Таблицы/Main task.html
+++ b/2_HTML_Таблицы/Main task.html
@@ -7,7 +7,7 @@
     <title>Основное задание</title>
 </head>
 <body>
-    <table width="500" border="1"><caption><i>Прогноз погоды</i></caption>
+    <table align="center" width="500" border="1"><caption><i>Прогноз погоды</i></caption>
         <thead align="center">
             <td><b>Город</b></td>
             <td><b>Утро</b></td>
