--- a/site/about.html
+++ b/site/about.html
@@ -18,5 +18,6 @@
         </ul>
     </nav>
 <H1>Здесь информация о компании</H1>
+<p><a href="about/contacts.html">Наши контакты</a></p>
 </body>
 </html>
