--- a/site/catalog.html
+++ b/site/catalog.html
@@ -18,7 +18,7 @@
         </ul>
     </nav>
 <H1>Здесь будет каталог товаров: с таблицами ценами и т.д.</H1>
-<p><a href="catalog/a_w.html"></a>Каталог Осень-зима</a></p>
-<p><a href="catalog/s_s.html"></a>Каталог Весна-лето</a></p>
+<p><a href="catalog/a_w.html">Каталог Осень-зима</a></p>
+<p><a href="catalog/s_s.html">Каталог Весна-лето</a></p>
 </body>
 </html>
