--- a/site/promo.html
+++ b/site/promo.html
@@ -18,7 +18,7 @@
         </ul>
     </nav>
 <h1>Здесь актуальные акции</h1>
-<h3><a href="/catalog/a_w.html">Коллекция Осень-зима</a></h3>
-<h3><a href="/catalog/s_s.html">Коллекция Весна-лето</a></h3>
+<h3><a href="catalog/a_w.html">Коллекция Осень-зима</a></h3>
+<h3><a href="catalog/s_s.html">Коллекция Весна-лето</a></h3>
 </body>
 </html>
