--- a/site/index.html
+++ b/site/index.html
@@ -28,7 +28,7 @@
     <ul>
         <li><a href="index.html">Главная</a>
             <ul>
-                <li><a href="#">Новости</a></li>
+                <li><a href="news/news.html">Новости</a></li>
             </ul>
         </li>
         <li><a href="catalog.html">Каталог</a>
