--- a/site/catalog/s_s.html
+++ b/site/catalog/s_s.html
@@ -17,7 +17,7 @@
           <li><a href="../about.html">О нас</a></li>
         </ul>
     </nav>
-<h1><a href="a_w.html"></a>Здесь коллекция осень-зима</a></h1>
+<h1><a href="a_w.html">Здесь коллекция осень-зима</a></h1>
 <h1>коллекция весна-лето</h1>
 </body>
 </html>
