--- a/4_HTML_Multimedia/task_1.html
+++ b/4_HTML_Multimedia/task_1.html
@@ -64,8 +64,11 @@ for cntr in range(0,10):
 <span align="justify"><em>Не забудьте поставить символ табуляции перед строкой «print cntr».</em> Это важно. В 
 Python для указания на блоки кода используются не круглые «(» и фигурные «{» скобки 
 как в других языках программирования, а отступы</span>
+<br>
 <tr>
-    <td><a href="task_1.html"><img src="заг"</a></td>
+    <td align="left"><a href="task_1.html"><img src="left.png" align="left" alt="назад" title="Предыдущая страница"></a></td>
+    <td align="center"><a href="task_1.html"><img align="middle" src="home.png" alt="наверх" title="Наверх страницы" ></a></td>
+    <td align="right"><a href="task_2.html"><img src="right.png" align="right" alt="вперед" title="Следующая страница"></a></td>
 </tr>
 </body>
 </html>
