--- a/4_HTML_Multimedia/task_3.html
+++ b/4_HTML_Multimedia/task_3.html
@@ -99,6 +99,12 @@
     DoTwo(10,5)
     </pre></code>
     <span>Как видите, здесь написано меньше кода — 8 строк вместо 12. Если нам нужно будет что-либо поменять в функции, мы сможем сделать это, не создавая проблем для нашей 
-        программы. Чтобы вызвать функцию, нужно написать её имя и параметры</span>    
+        программы. Чтобы вызвать функцию, нужно написать её имя и параметры</span>
+    <br>
+    <tr>
+            <td align="left"><a href="task_2.html"><img src="left.png" align="left" alt="назад" title="Предыдущая страница"></a></td>
+            <td align="center"><a href="task_3.html"><img align="middle" src="home.png" alt="наверх" title="Наверх страницы"></a></td>
+            <td align="right"><a href="task_3.html"><img src="right.png" align="right" alt="вперед" title="Следующая страница"></a></td>
+    </tr>    
 </body>
 </html>
