--- a/4_HTML_Multimedia/task_2.html
+++ b/4_HTML_Multimedia/task_2.html
@@ -61,9 +61,11 @@
     <p>Это комментарий</p>
     <p>Комментарии можно вставлять в любое место в строке, но помните, что Python 
         проигнорирует всё, что идёт после '#'.</p>
-
-
-
-    
+    <br>
+    <tr>
+            <td align="left"><a href="task_1.html"><img src="left.png" align="left" alt="назад" title="Предыдущая страница"></a></td>
+            <td align="center"><a href="task_2.html"><img align="middle" src="home.png" alt="наверх" title="Наверх страницы"></a></td>
+            <td align="right"><a href="task_3.html"><img src="right.png" align="right" alt="вперед" title="Следующая страница"></a></td>
+    </tr>    
 </body>
 </html>
