--- a/4_HTML_Multimedia/task_1.html
+++ b/4_HTML_Multimedia/task_1.html
@@ -65,10 +65,12 @@ for cntr in range(0,10):
 Python для указания на блоки кода используются не круглые «(» и фигурные «{» скобки 
 как в других языках программирования, а отступы</span>
 <br>
+<table width="100%">
 <tr>
     <td align="left"><a href="task_1.html"><img src="left.png" align="left" alt="назад" title="Предыдущая страница"></a></td>
     <td align="center"><a href="task_1.html"><img align="middle" src="home.png" alt="наверх" title="Наверх страницы" ></a></td>
     <td align="right"><a href="task_2.html"><img src="right.png" align="right" alt="вперед" title="Следующая страница"></a></td>
 </tr>
+</table>
 </body>
 </html>
