--- a/1_CSS_Styles/main4.html
+++ b/1_CSS_Styles/main4.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+    @import "print.css" print; 
+    @import "screen.css" screen; 
+    </style>
     <title>Document</title>
 </head>
-<body style="font-family: sans-serif;
-font-size: 14px;
-background-color: #eee;">
+<body>
     <H1 align="center"><strong>HOW-TO: Программа на Python, Часть 1</strong></H1> 
     <img src="Icon-Python.7bb116a5.png" align="right" alt="Python.png" title="Питухон">
             <ul>
@@ -36,7 +38,7 @@ background-color: #eee;">
         каждая строка и пойдём дальше.</span>
     <p id="Программа">Введите эти 4 строки:</p>
     <br>
-    <pre><code>
+    <pre><code font-type="Arial">
         #!/usr/bin/env python
         print 'Hello. I am a python program.'
         name = raw_input("What is your name?")
