--- a/1_CSS_Styles/main1.html
+++ b/1_CSS_Styles/main1.html
@@ -6,9 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body style="font-family: sans-serif;
-font-size: 14px;
-background-color: #eee;">
+<body style="font-family: sans-serif; font-size: 14px; background-color: #eee;">
     <H1 align="center"><strong>HOW-TO: Программа на Python, Часть 1</strong></H1> 
     <img src="Icon-Python.7bb116a5.png" align="right" alt="Python.png" title="Питухон">
             <ul>
