--- a/3_HTML_References/Add_task/site/index.html
+++ b/3_HTML_References/Add_task/site/index.html
@@ -5,12 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site.by</title>
-    <link rel="stylesheet" href="index.css">
+    <style>
+        ul.aa li{
+            display:inline-block
+        }
+    </style>
 </head>
 <body>
-    <nav class="one">
+    <nav>
         <h2 align="center">Горизонтальное меню</h2>
-        <ul>
+        <ul class="aa" align="center">
           <li><a href="index.html">Главная</a></li>
           <li><a href="catalog.html">Каталог</a></li>
           <li ><a href="promo.html">Акции</a></li>
@@ -51,35 +55,47 @@
         </li>
     </ul>
     <h2>Меню таблица с вложенными таблицами</h2>
-    <table border="1"><title>Меню таблица</title>
+    <table><caption>Меню таблица</caption>
         <tr>
-            <td>
+            <td><a href="index.html">Главная</a>
                 <table>
-                    <tr><a href="index.html">Главная</a>
+                    <tr>
                         <td><a href="news/news.html">Новости</a></td>
                     </tr>
                 </table>
             </td>
-            <td>
+        </tr>
+        <tr>
+            <td><a href="catalog.html">Каталог</a>
                 <table>
-                    <tr><a href="catalog.html">Каталог</a>
+                    <tr>
                         <td><a href="catalog/a_w.html">Осень-зима</a></td>
+                    </tr>
+                    <tr>
                         <td><a href="catalog/s_s.html">Весна-лето</a></td>
                     </tr>
                 </table>
             </td>
-            <td>
+        </tr>
+        <tr>
+            <td><a href="promo.html">Акции</a>
                 <table>
-                    <tr><a href="promo.html">Акции</a>
+                    <tr>
                         <td><a href="promo/last.html">Актуальные</a></td>
+                    </tr>
+                    <tr>
                         <td><a href="promo/old.html">Прошедшие</a></td>
                     </tr>
                 </table>
             </td>
-            <td>
+        </tr>
+        <tr>
+            <td><a href="about.html">О нас</a>
                 <table>
-                    <tr><a href="about.html">О нас</a>
+                    <tr>
                         <td><a href="about/contacts.html">Контакты</a></td>
+                    </tr>
+                    <tr>
                         <td><a href="about/scheme.html">Проезд</a></td>
                     </tr>
                 </table>
