--- a/3_HTML_References/Add_task/site/promo.html
+++ b/3_HTML_References/Add_task/site/promo.html
@@ -5,20 +5,102 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site.by</title>
-    <link rel="stylesheet" href="index.css">
+    <style>
+        ul.aa li{
+            display:inline-block
+        }
+    </style>
 </head>
 <body>
-    <nav class="one">
+    <nav>
         <h2 align="center">Горизонтальное меню</h2>
-        <ul>
-            <li><a href="index.html">Главная</a></li>
-            <li><a href="catalog.html">Каталог</a></li>
-            <li ><a href="promo.html">Акции</a></li>
-            <li><a href="about.html">О нас</a></li>
+        <ul class="aa" align="center">
+          <li><a href="index.html">Главная</a></li>
+          <li><a href="catalog.html">Каталог</a></li>
+          <li ><a href="promo.html">Акции</a></li>
+          <li><a href="about.html">О нас</a></li>
         </ul>
     </nav>
-<h1>Здесь актуальные акции</h1>
-<h3><a href="catalog/a_w.html">Коллекция Осень-зима</a></h3>
-<h3><a href="catalog/s_s.html">Коллекция Весна-лето</a></h3>
+    <h2>Меню список</h2>
+    <ul>
+        <li><a href="index.html">Главная</a></li>
+        <li><a href="catalog.html">Каталог</a></li>
+        <li ><a href="promo.html">Акции</a></li>
+        <li><a href="about.html">О нас</a></li>
+    </ul>
+    <h2>Меню с вложенным списком</h2>
+    <ul>
+        <li><a href="index.html">Главная</a>
+            <ul>
+                <li><a href="news/news.html">Новости</a></li>
+            </ul>
+        </li>
+        <li><a href="catalog.html">Каталог</a>
+            <ul>
+                <li><a href="catalog/a_w.html">Осень-зима</a></li>
+                <li><a href="catalog/s_s.html">Весна-лето</a></li>
+            </ul>
+        </li>
+        <li><a href="promo.html"></a>Акции
+            <ul>
+                <li><a href="promo/last.html">Актуальные</a></li>
+                <li><a href="promo/old.html">Прошедшие</a></li>
+            </ul>
+        </li>
+        <li><a href="about.html"></a>О нас
+            <ul>
+                <li><a href="about/contacts.html">Контакты</a></li>
+                <li><a href="about/scheme.html">Проезд</a></li>
+            </ul>
+        </li>
+    </ul>
+    <h2>Меню таблица с вложенными таблицами</h2>
+    <table><caption>Меню таблица</caption>
+        <tr>
+            <td><a href="index.html">Главная</a>
+                <table>
+                    <tr>
+                        <td><a href="news/news.html">Новости</a></td>
+                    </tr>
+                </table>
+            </td>
+        </tr>
+        <tr>
+            <td><a href="catalog.html">Каталог</a>
+                <table>
+                    <tr>
+                        <td><a href="catalog/a_w.html">Осень-зима</a></td>
+                    </tr>
+                    <tr>
+                        <td><a href="catalog/s_s.html">Весна-лето</a></td>
+                    </tr>
+                </table>
+            </td>
+        </tr>
+        <tr>
+            <td><a href="promo.html">Акции</a>
+                <table>
+                    <tr>
+                        <td><a href="promo/last.html">Актуальные</a></td>
+                    </tr>
+                    <tr>
+                        <td><a href="promo/old.html">Прошедшие</a></td>
+                    </tr>
+                </table>
+            </td>
+        </tr>
+        <tr>
+            <td><a href="about.html">О нас</a>
+                <table>
+                    <tr>
+                        <td><a href="about/contacts.html">Контакты</a></td>
+                    </tr>
+                    <tr>
+                        <td><a href="about/scheme.html">Проезд</a></td>
+                    </tr>
+                </table>
+            </td>
+        </tr>
+    </table>
 </body>
 </html>
