--- a/3_HTML_References/Add_task/site/promo/old.html
+++ b/3_HTML_References/Add_task/site/promo/old.html
@@ -15,42 +15,42 @@
     <nav>
         <h2 align="center">Горизонтальное меню</h2>
         <ul class="aa" align="center">
-          <li><a href="index.html">Главная</a></li>
-          <li><a href="catalog.html">Каталог</a></li>
-          <li ><a href="promo.html">Акции</a></li>
-          <li><a href="about.html">О нас</a></li>
+          <li><a href="../index.html">Главная</a></li>
+          <li><a href="../catalog.html">Каталог</a></li>
+          <li ><a href="../promo.html">Акции</a></li>
+          <li><a href="../about.html">О нас</a></li>
         </ul>
     </nav>
     <h2>Меню список</h2>
     <ul>
-        <li><a href="index.html">Главная</a></li>
-        <li><a href="catalog.html">Каталог</a></li>
-        <li ><a href="promo.html">Акции</a></li>
-        <li><a href="about.html">О нас</a></li>
+        <li><a href="../index.html">Главная</a></li>
+        <li><a href="../catalog.html">Каталог</a></li>
+        <li ><a href="../promo.html">Акции</a></li>
+        <li><a href="../about.html">О нас</a></li>
     </ul>
     <h2>Меню с вложенным списком</h2>
     <ul>
-        <li><a href="index.html">Главная</a>
+        <li><a href="../index.html">Главная</a>
             <ul>
-                <li><a href="news/news.html">Новости</a></li>
+                <li><a href="../news/news.html">Новости</a></li>
             </ul>
         </li>
-        <li><a href="catalog.html">Каталог</a>
+        <li><a href="../catalog.html">Каталог</a>
             <ul>
-                <li><a href="catalog/a_w.html">Осень-зима</a></li>
-                <li><a href="catalog/s_s.html">Весна-лето</a></li>
+                <li><a href="../catalog/a_w.html">Осень-зима</a></li>
+                <li><a href="../catalog/s_s.html">Весна-лето</a></li>
             </ul>
         </li>
-        <li><a href="promo.html"></a>Акции
+        <li><a href="../promo.html"></a>Акции
             <ul>
-                <li><a href="promo/last.html">Актуальные</a></li>
-                <li><a href="promo/old.html">Прошедшие</a></li>
+                <li><a href="last.html">Актуальные</a></li>
+                <li><a href="old.html">Прошедшие</a></li>
             </ul>
         </li>
-        <li><a href="about.html"></a>О нас
+        <li><a href="../about.html"></a>О нас
             <ul>
-                <li><a href="about/contacts.html">Контакты</a></li>
-                <li><a href="about/scheme.html">Проезд</a></li>
+                <li><a href="../about/contacts.html">Контакты</a></li>
+                <li><a href="../about/scheme.html">Проезд</a></li>
             </ul>
         </li>
     </ul>
