--- a/4_HTML_Multimedia/task_3.html
+++ b/4_HTML_Multimedia/task_3.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HOW-TO: Программа на Python, Часть 3</title>
+    <i class="fa-solid fa-square-left"></i>
 </head>
 <body>
     <H1 align="center"><strong>HOW-TO: Программа на Python, Часть 1</strong></H1> 
@@ -101,10 +102,11 @@
     <span>Как видите, здесь написано меньше кода — 8 строк вместо 12. Если нам нужно будет что-либо поменять в функции, мы сможем сделать это, не создавая проблем для нашей 
         программы. Чтобы вызвать функцию, нужно написать её имя и параметры</span>
     <br>
+    <table width="100%">
     <tr>
             <td align="left"><a href="task_2.html"><img src="left.png" align="left" alt="назад" title="Предыдущая страница"></a></td>
             <td align="center"><a href="task_3.html"><img align="middle" src="home.png" alt="наверх" title="Наверх страницы"></a></td>
             <td align="right"><a href="task_3.html"><img src="right.png" align="right" alt="вперед" title="Следующая страница"></a></td>
-    </tr>    
+    </tr> </table>   
 </body>
 </html>
