--- a/2_CSS_Background_Lists_Cont/main1.html
+++ b/2_CSS_Background_Lists_Cont/main1.html
@@ -8,6 +8,7 @@
     <link href="main1.css" rel="stylesheet" type="text/css">
 </head>
 <body>
+   
     <ul>
         <li><a href="#"><span></span></a></li>
         <li><a href="#"><span></span></a></li>
@@ -15,6 +16,14 @@
         <li><a href="#"><span></span></a></li>
         <li><a href="#"><span></span></a></li>
     </ul>
-    
+
+    <ul>
+        <li><a href="#"><div></div></a></li>
+        <li><a href="#"><div></div></a></li>
+        <li><a href="#"><div></div></a></li>
+        <li><a href="#"><div></div></a></li>
+        <li><a href="#"><div></div></a></li>
+    </ul>
+
 </body>
 </html>
