--- a/2_CSS_Background_Lists_Cont/main2.html
+++ b/2_CSS_Background_Lists_Cont/main2.html
@@ -8,12 +8,26 @@
     <link href="main2.css" rel="stylesheet" type="text/css">
 </head>
 <body>
+    <ul >
+        <li>Контейнер с кодом</li>
+            <ul class="inside">
+                <li>Цвет фона: черный</li>
+                <li>Цвет текста: зеленый</li>
+                <li>Максимальная высота контейнера: 4 строки</li>
+                <li>Переполнение: автоматическое</li>
+            </ul>
+    <li>Список</li>
+            <ul class="inside">
+                <li>Ширина 350рх</li>
+                <li>Тип списка: римские цифры</li>
+                <li>Тип вложенного списка: римский нижний регистр цифры</li>
+        </ul>
+    </ul>
     <div>
-        <h4>Контейнер с кодом</h4>
-        <p>Цвет фона: черный</p>
-        <p>Цвет текста: зеленый</p>
-        <p>Максимальная высота контейнера: 4 строки</p>
-        <p>Переполнение: автоматическое</p>
+        <p>#!/usr/bin/env python</p>
+        <p>print 'Hello. I am a python program.'</p>
+        <p>name = raw_input("What is your name?")</p>
+        <p>print "Hello there, " + name + "!"</p>
     </div>
     
 </body>
