--- a/2_CSS_Background_Lists_Cont/main3.html
+++ b/2_CSS_Background_Lists_Cont/main3.html
@@ -25,14 +25,15 @@
     </div>
     <div class="kostyl"></div>
     <div class="article">
+        <h4>Article 2</h4>
         <p>Размер блока:</p>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
+        <p>Занимает всю доступную ширину</p>
+        <p>Должен присутствовать цвет фона</p>
+        <p>Во всех статьеях сделайте отступ снизу от соседей равный 2em, при помощи свойства margin-bottom. Картинка вставлена при помощи тега, плавние организовано по правому краю внутри данной статьи для этой картинки</p>
+        <p><img src="Mail.jpg" alt="mail.jpg"></p>
     </div>
-
-
+    <div class="footer">Нижний блок-подвал. Занимает всю доступную ширину. Высота определяется помещенным внуть контентом</div></div>
+   
     
 </body>
 </html>
